--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -603,6 +603,9 @@
   "components.governance.confirm": "Confirm",
   "components.governance.transactionDetails": "Transaction details",
   "components.governance.total": "Total",
+  "components.governance.transactionFailed": "Transaction failed",
+  "components.governance.transactionFailedDescription": "Your transaction has not been processed properly due to technical issues",
+  "components.governance.tryAgain": "Try again",
   "crypto.errors.rewardAddressEmpty": "Reward address is empty.",
   "crypto.keystore.approveTransaction": "Authorize with your biometrics",
   "crypto.keystore.cancelButton": "Cancel",
