feature(scan): interpret crypto links (#2916)

--- a/apps/wallet-mobile/translations/messages/src/TxHistory/TxHistoryNavigator.json
+++ b/apps/wallet-mobile/translations/messages/src/TxHistory/TxHistoryNavigator.json
@@ -4,14 +4,14 @@
     "defaultMessage": "!!!Receive",
     "file": "src/TxHistory/TxHistoryNavigator.tsx",
     "start": {
-      "line": 278,
+      "line": 299,
       "column": 16,
-      "index": 9703
+      "index": 10378
     },
     "end": {
-      "line": 281,
+      "line": 302,
       "column": 3,
-      "index": 9792
+      "index": 10467
     }
   },
   {
@@ -19,14 +19,14 @@
     "defaultMessage": "!!!Swap",
     "file": "src/TxHistory/TxHistoryNavigator.tsx",
     "start": {
-      "line": 282,
+      "line": 303,
       "column": 13,
-      "index": 9807
+      "index": 10482
     },
     "end": {
-      "line": 285,
+      "line": 306,
       "column": 3,
-      "index": 9880
+      "index": 10555
     }
   },
   {
@@ -34,14 +34,14 @@
     "defaultMessage": "!!!Swap from",
     "file": "src/TxHistory/TxHistoryNavigator.tsx",
     "start": {
-      "line": 286,
+      "line": 307,
       "column": 17,
-      "index": 9899
+      "index": 10574
     },
     "end": {
-      "line": 289,
+      "line": 310,
       "column": 3,
-      "index": 9976
+      "index": 10651
     }
   },
   {
@@ -49,14 +49,14 @@
     "defaultMessage": "!!!Swap to",
     "file": "src/TxHistory/TxHistoryNavigator.tsx",
     "start": {
-      "line": 290,
+      "line": 311,
       "column": 15,
-      "index": 9993
+      "index": 10668
     },
     "end": {
-      "line": 293,
+      "line": 314,
       "column": 3,
-      "index": 10066
+      "index": 10741
     }
   },
   {
@@ -64,14 +64,14 @@
     "defaultMessage": "!!!Slippage Tolerance",
     "file": "src/TxHistory/TxHistoryNavigator.tsx",
     "start": {
-      "line": 294,
+      "line": 315,
       "column": 21,
-      "index": 10089
+      "index": 10764
     },
     "end": {
-      "line": 297,
+      "line": 318,
       "column": 3,
-      "index": 10184
+      "index": 10859
     }
   },
   {
@@ -79,14 +79,14 @@
     "defaultMessage": "!!!Select pool",
     "file": "src/TxHistory/TxHistoryNavigator.tsx",
     "start": {
-      "line": 298,
+      "line": 319,
       "column": 14,
-      "index": 10200
+      "index": 10875
     },
     "end": {
-      "line": 301,
+      "line": 322,
       "column": 3,
-      "index": 10281
+      "index": 10956
     }
   },
   {
@@ -94,14 +94,14 @@
     "defaultMessage": "!!!Send",
     "file": "src/TxHistory/TxHistoryNavigator.tsx",
     "start": {
-      "line": 302,
+      "line": 323,
       "column": 13,
-      "index": 10296
+      "index": 10971
     },
     "end": {
-      "line": 305,
+      "line": 326,
       "column": 3,
-      "index": 10376
+      "index": 11051
     }
   },
   {
@@ -109,14 +109,14 @@
     "defaultMessage": "!!!Scan QR code address",
     "file": "src/TxHistory/TxHistoryNavigator.tsx",
     "start": {
-      "line": 306,
+      "line": 327,
       "column": 18,
-      "index": 10396
+      "index": 11071
     },
     "end": {
-      "line": 309,
+      "line": 330,
       "column": 3,
-      "index": 10497
+      "index": 11172
     }
   },
   {
@@ -124,14 +124,14 @@
     "defaultMessage": "!!!Select asset",
     "file": "src/TxHistory/TxHistoryNavigator.tsx",
     "start": {
-      "line": 310,
+      "line": 331,
       "column": 20,
-      "index": 10519
+      "index": 11194
     },
     "end": {
-      "line": 313,
+      "line": 334,
       "column": 3,
-      "index": 10608
+      "index": 11283
     }
   },
   {
@@ -139,14 +139,14 @@
     "defaultMessage": "!!!Selected tokens",
     "file": "src/TxHistory/TxHistoryNavigator.tsx",
     "start": {
-      "line": 314,
+      "line": 335,
       "column": 26,
-      "index": 10636
+      "index": 11311
     },
     "end": {
-      "line": 317,
+      "line": 338,
       "column": 3,
-      "index": 10740
+      "index": 11415
     }
   },
   {
@@ -154,14 +154,14 @@
     "defaultMessage": "!!!Edit amount",
     "file": "src/TxHistory/TxHistoryNavigator.tsx",
     "start": {
-      "line": 318,
+      "line": 339,
       "column": 19,
-      "index": 10761
+      "index": 11436
     },
     "end": {
-      "line": 321,
+      "line": 342,
       "column": 3,
-      "index": 10854
+      "index": 11529
     }
   },
   {
@@ -169,14 +169,14 @@
     "defaultMessage": "!!!Confirm",
     "file": "src/TxHistory/TxHistoryNavigator.tsx",
     "start": {
-      "line": 322,
+      "line": 343,
       "column": 16,
-      "index": 10872
+      "index": 11547
     },
     "end": {
-      "line": 325,
+      "line": 346,
       "column": 3,
-      "index": 10958
+      "index": 11633
     }
   },
   {
@@ -184,14 +184,14 @@
     "defaultMessage": "!!!Share this address to receive payments. To protect your privacy, new addresses are generated automatically once you use them.",
     "file": "src/TxHistory/TxHistoryNavigator.tsx",
     "start": {
-      "line": 326,
+      "line": 347,
       "column": 19,
-      "index": 10979
+      "index": 11654
     },
     "end": {
-      "line": 332,
+      "line": 353,
       "column": 3,
-      "index": 11217
+      "index": 11892
     }
   },
   {
@@ -199,14 +199,29 @@
     "defaultMessage": "!!!Confirm transaction",
     "file": "src/TxHistory/TxHistoryNavigator.tsx",
     "start": {
-      "line": 333,
+      "line": 354,
       "column": 27,
-      "index": 11246
+      "index": 11921
     },
     "end": {
-      "line": 336,
+      "line": 357,
       "column": 3,
-      "index": 11339
+      "index": 12014
+    }
+  },
+  {
+    "id": "scan.title",
+    "defaultMessage": "!!!Please scan a QR code",
+    "file": "src/TxHistory/TxHistoryNavigator.tsx",
+    "start": {
+      "line": 358,
+      "column": 13,
+      "index": 12029
+    },
+    "end": {
+      "line": 361,
+      "column": 3,
+      "index": 12104
     }
   }
 ]
