--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -606,6 +606,9 @@
   "components.governance.transactionFailed": "Transaction failed",
   "components.governance.transactionFailedDescription": "Your transaction has not been processed properly due to technical issues",
   "components.governance.tryAgain": "Try again",
+  "components.governance.withdrawWarningTitle": "Withdraw warning",
+  "components.governance.withdrawWarningDescription": "To withdraw your rewards, you need to participate in the Cardano Governance. Your rewards will continue to accumulate, but you are only able to withdraw it once you join the Governance process.",
+  "components.governance.withdrawWarningButton": "Participate on governance",
   "crypto.errors.rewardAddressEmpty": "Reward address is empty.",
   "crypto.keystore.approveTransaction": "Authorize with your biometrics",
   "crypto.keystore.cancelButton": "Cancel",
