--- a/apps/wallet-mobile/translations/messages/src/features/Staking/Governance/common/strings.json
+++ b/apps/wallet-mobile/translations/messages/src/features/Staking/Governance/common/strings.json
@@ -4,14 +4,14 @@
     "defaultMessage": "!!!Governance centre",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 48,
+      "line": 51,
       "column": 25,
-      "index": 2935
+      "index": 3180
     },
     "end": {
-      "line": 51,
+      "line": 54,
       "column": 3,
-      "index": 3039
+      "index": 3284
     }
   },
   {
@@ -19,14 +19,14 @@
     "defaultMessage": "!!!Confirm transaction",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 52,
+      "line": 55,
       "column": 18,
-      "index": 3059
+      "index": 3304
     },
     "end": {
-      "line": 55,
+      "line": 58,
       "column": 3,
-      "index": 3158
+      "index": 3403
     }
   },
   {
@@ -34,14 +34,14 @@
     "defaultMessage": "!!!Learn more About Governance",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 56,
+      "line": 59,
       "column": 28,
-      "index": 3188
+      "index": 3433
     },
     "end": {
-      "line": 59,
+      "line": 62,
       "column": 3,
-      "index": 3305
+      "index": 3550
     }
   },
   {
@@ -49,14 +49,14 @@
     "defaultMessage": "!!!Delegate to a DRep",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 60,
+      "line": 63,
       "column": 30,
-      "index": 3337
+      "index": 3582
     },
     "end": {
-      "line": 63,
+      "line": 66,
       "column": 3,
-      "index": 3447
+      "index": 3692
     }
   },
   {
@@ -64,14 +64,14 @@
     "defaultMessage": "!!!You are designating someone else to cast vote on your behalf for all proposals now and in the future.",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 64,
+      "line": 67,
       "column": 36,
-      "index": 3485
+      "index": 3730
     },
     "end": {
-      "line": 68,
+      "line": 71,
       "column": 3,
-      "index": 3690
+      "index": 3935
     }
   },
   {
@@ -79,14 +79,14 @@
     "defaultMessage": "!!!Abstain",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 69,
+      "line": 72,
       "column": 22,
-      "index": 3714
+      "index": 3959
     },
     "end": {
-      "line": 72,
+      "line": 75,
       "column": 3,
-      "index": 3805
+      "index": 4050
     }
   },
   {
@@ -94,14 +94,14 @@
     "defaultMessage": "!!!You are choosing not to cast a vote on all proposals now and in the future.",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 73,
+      "line": 76,
       "column": 28,
-      "index": 3835
+      "index": 4080
     },
     "end": {
-      "line": 76,
+      "line": 79,
       "column": 3,
-      "index": 4000
+      "index": 4245
     }
   },
   {
@@ -109,14 +109,14 @@
     "defaultMessage": "!!!No confidence",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 77,
+      "line": 80,
       "column": 27,
-      "index": 4029
+      "index": 4274
     },
     "end": {
-      "line": 80,
+      "line": 83,
       "column": 3,
-      "index": 4131
+      "index": 4376
     }
   },
   {
@@ -124,14 +124,14 @@
     "defaultMessage": "!!!You are expressing a lack of trust for all proposals now and in the future.",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 81,
+      "line": 84,
       "column": 33,
-      "index": 4166
+      "index": 4411
     },
     "end": {
-      "line": 84,
+      "line": 87,
       "column": 3,
-      "index": 4336
+      "index": 4581
     }
   },
   {
@@ -139,14 +139,14 @@
     "defaultMessage": "!!!DRep Key",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 85,
+      "line": 88,
       "column": 11,
-      "index": 4349
+      "index": 4594
     },
     "end": {
-      "line": 88,
+      "line": 91,
       "column": 3,
-      "index": 4430
+      "index": 4675
     }
   },
   {
@@ -154,14 +154,14 @@
     "defaultMessage": "!!!Delegating to a DRep",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 89,
+      "line": 92,
       "column": 21,
-      "index": 4453
+      "index": 4698
     },
     "end": {
-      "line": 92,
+      "line": 95,
       "column": 3,
-      "index": 4556
+      "index": 4801
     }
   },
   {
@@ -169,14 +169,14 @@
     "defaultMessage": "!!!Abstaining",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 93,
+      "line": 96,
       "column": 14,
-      "index": 4572
+      "index": 4817
     },
     "end": {
-      "line": 96,
+      "line": 99,
       "column": 3,
-      "index": 4658
+      "index": 4903
     }
   },
   {
@@ -184,14 +184,14 @@
     "defaultMessage": "!!!Delegate voting to {drepID}",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 97,
+      "line": 100,
       "column": 24,
-      "index": 4684
+      "index": 4929
     },
     "end": {
-      "line": 100,
+      "line": 103,
       "column": 3,
-      "index": 4797
+      "index": 5042
     }
   },
   {
@@ -199,14 +199,14 @@
     "defaultMessage": "!!!Select abstain",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 101,
+      "line": 104,
       "column": 17,
-      "index": 4816
+      "index": 5061
     },
     "end": {
-      "line": 104,
+      "line": 107,
       "column": 3,
-      "index": 4909
+      "index": 5154
     }
   },
   {
@@ -214,14 +214,14 @@
     "defaultMessage": "!!!Select no confidence",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 105,
+      "line": 108,
       "column": 22,
-      "index": 4933
+      "index": 5178
     },
     "end": {
-      "line": 108,
+      "line": 111,
       "column": 3,
-      "index": 5037
+      "index": 5282
     }
   },
   {
@@ -229,14 +229,14 @@
     "defaultMessage": "!!!Operations",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 109,
+      "line": 112,
       "column": 14,
-      "index": 5053
+      "index": 5298
     },
     "end": {
-      "line": 112,
+      "line": 115,
       "column": 3,
-      "index": 5139
+      "index": 5384
     }
   },
   {
@@ -244,14 +244,14 @@
     "defaultMessage": "!!!Enter a Drep ID and password to sign this transaction",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 113,
+      "line": 116,
       "column": 27,
-      "index": 5168
+      "index": 5413
     },
     "end": {
-      "line": 116,
+      "line": 119,
       "column": 3,
-      "index": 5310
+      "index": 5555
     }
   },
   {
@@ -259,14 +259,14 @@
     "defaultMessage": "!!!Drep ID",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 117,
+      "line": 120,
       "column": 10,
-      "index": 5322
+      "index": 5567
     },
     "end": {
-      "line": 120,
+      "line": 123,
       "column": 3,
-      "index": 5401
+      "index": 5646
     }
   },
   {
@@ -274,14 +274,14 @@
     "defaultMessage": "!!!Thank you for participating in Governance",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 121,
+      "line": 124,
       "column": 28,
-      "index": 5431
+      "index": 5676
     },
     "end": {
-      "line": 124,
+      "line": 127,
       "column": 3,
-      "index": 5562
+      "index": 5807
     }
   },
   {
@@ -289,14 +289,14 @@
     "defaultMessage": "!!!This transaction can take a while!",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 125,
+      "line": 128,
       "column": 32,
-      "index": 5596
+      "index": 5841
     },
     "end": {
-      "line": 128,
+      "line": 131,
       "column": 3,
-      "index": 5724
+      "index": 5969
     }
   },
   {
@@ -304,14 +304,14 @@
     "defaultMessage": "!!!Participating in the Cardano Governance gives you the opportunity to participate in the voting as well as withdraw your staking rewards",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 129,
+      "line": 132,
       "column": 25,
-      "index": 5751
+      "index": 5996
     },
     "end": {
-      "line": 133,
+      "line": 136,
       "column": 3,
-      "index": 5979
+      "index": 6224
     }
   },
   {
@@ -319,14 +319,14 @@
     "defaultMessage": "!!!Go to Governance",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 134,
+      "line": 137,
       "column": 18,
-      "index": 5999
+      "index": 6244
     },
     "end": {
-      "line": 137,
+      "line": 140,
       "column": 3,
-      "index": 6095
+      "index": 6340
     }
   },
   {
@@ -334,14 +334,14 @@
     "defaultMessage": "!!!Find a DRep here",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 138,
+      "line": 141,
       "column": 16,
-      "index": 6113
+      "index": 6358
     },
     "end": {
-      "line": 141,
+      "line": 144,
       "column": 3,
-      "index": 6207
+      "index": 6452
     }
   },
   {
@@ -349,14 +349,14 @@
     "defaultMessage": "!!!Review the selections carefully to assign yourself a Governance Status",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 142,
+      "line": 145,
       "column": 17,
-      "index": 6226
+      "index": 6471
     },
     "end": {
-      "line": 145,
+      "line": 148,
       "column": 3,
-      "index": 6375
+      "index": 6620
     }
   },
   {
@@ -364,14 +364,14 @@
     "defaultMessage": "!!!You have selected <b>{action}</b> as your governance status.",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 146,
+      "line": 149,
       "column": 34,
-      "index": 6411
+      "index": 6656
     },
     "end": {
-      "line": 149,
+      "line": 152,
       "column": 3,
-      "index": 6567
+      "index": 6812
     }
   },
   {
@@ -379,14 +379,14 @@
     "defaultMessage": "!!!You have selected <b>{action}</b> as your governance status. You can change it at any time by clicking in the card below.",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 150,
+      "line": 153,
       "column": 25,
-      "index": 6594
+      "index": 6839
     },
     "end": {
-      "line": 154,
+      "line": 157,
       "column": 3,
-      "index": 6808
+      "index": 7053
     }
   },
   {
@@ -394,14 +394,14 @@
     "defaultMessage": "!!!Change DRep",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 155,
+      "line": 158,
       "column": 14,
-      "index": 6824
+      "index": 7069
     },
     "end": {
-      "line": 158,
+      "line": 161,
       "column": 3,
-      "index": 6911
+      "index": 7156
     }
   },
   {
@@ -409,14 +409,14 @@
     "defaultMessage": "!!!Confirm",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 159,
+      "line": 162,
       "column": 11,
-      "index": 6924
+      "index": 7169
     },
     "end": {
-      "line": 162,
+      "line": 165,
       "column": 3,
-      "index": 7004
+      "index": 7249
     }
   },
   {
@@ -424,14 +424,14 @@
     "defaultMessage": "!!!Transaction details",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 163,
+      "line": 166,
       "column": 22,
-      "index": 7028
+      "index": 7273
     },
     "end": {
-      "line": 166,
+      "line": 169,
       "column": 3,
-      "index": 7131
+      "index": 7376
     }
   },
   {
@@ -439,14 +439,14 @@
     "defaultMessage": "!!!Total",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 167,
+      "line": 170,
       "column": 9,
-      "index": 7142
+      "index": 7387
     },
     "end": {
-      "line": 170,
+      "line": 173,
       "column": 3,
-      "index": 7218
+      "index": 7463
     }
   },
   {
@@ -454,14 +454,14 @@
     "defaultMessage": "!!!Transaction failed",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 171,
+      "line": 174,
       "column": 21,
-      "index": 7241
+      "index": 7486
     },
     "end": {
-      "line": 174,
+      "line": 177,
       "column": 3,
-      "index": 7342
+      "index": 7587
     }
   },
   {
@@ -469,14 +469,14 @@
     "defaultMessage": "!!!Your transaction has not been processed properly due to technical issues",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 175,
+      "line": 178,
       "column": 32,
-      "index": 7376
+      "index": 7621
     },
     "end": {
-      "line": 178,
+      "line": 181,
       "column": 3,
-      "index": 7542
+      "index": 7787
     }
   },
   {
@@ -484,14 +484,59 @@
     "defaultMessage": "!!!Try again",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 179,
+      "line": 182,
       "column": 12,
-      "index": 7556
+      "index": 7801
     },
     "end": {
-      "line": 182,
+      "line": 185,
       "column": 3,
-      "index": 7639
+      "index": 7884
+    }
+  },
+  {
+    "id": "components.governance.withdrawWarningTitle",
+    "defaultMessage": "!!!Withdraw warning",
+    "file": "src/features/Staking/Governance/common/strings.ts",
+    "start": {
+      "line": 186,
+      "column": 24,
+      "index": 7910
+    },
+    "end": {
+      "line": 189,
+      "column": 3,
+      "index": 8012
+    }
+  },
+  {
+    "id": "components.governance.withdrawWarningDescription",
+    "defaultMessage": "!!!To withdraw your rewards, you need to participate in the Cardano Governance. Your rewards will continue to accumulate, but you are only able to withdraw it once you join the Governance process.",
+    "file": "src/features/Staking/Governance/common/strings.ts",
+    "start": {
+      "line": 190,
+      "column": 30,
+      "index": 8044
+    },
+    "end": {
+      "line": 194,
+      "column": 3,
+      "index": 8335
+    }
+  },
+  {
+    "id": "components.governance.withdrawWarningButton",
+    "defaultMessage": "!!!Participate on governance",
+    "file": "src/features/Staking/Governance/common/strings.ts",
+    "start": {
+      "line": 195,
+      "column": 25,
+      "index": 8362
+    },
+    "end": {
+      "line": 198,
+      "column": 3,
+      "index": 8474
     }
   }
 ]
