--- a/apps/wallet-mobile/translations/messages/src/features/Staking/Governance/common/strings.json
+++ b/apps/wallet-mobile/translations/messages/src/features/Staking/Governance/common/strings.json
@@ -4,14 +4,14 @@
     "defaultMessage": "!!!Governance centre",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 51,
+      "line": 59,
       "column": 25,
-      "index": 3180
+      "index": 3681
     },
     "end": {
-      "line": 54,
+      "line": 62,
       "column": 3,
-      "index": 3284
+      "index": 3785
     }
   },
   {
@@ -19,14 +19,14 @@
     "defaultMessage": "!!!Confirm transaction",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 55,
+      "line": 63,
       "column": 18,
-      "index": 3304
+      "index": 3805
     },
     "end": {
-      "line": 58,
+      "line": 66,
       "column": 3,
-      "index": 3403
+      "index": 3904
     }
   },
   {
@@ -34,14 +34,14 @@
     "defaultMessage": "!!!Learn more About Governance",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 59,
+      "line": 67,
       "column": 28,
-      "index": 3433
+      "index": 3934
     },
     "end": {
-      "line": 62,
+      "line": 70,
       "column": 3,
-      "index": 3550
+      "index": 4051
     }
   },
   {
@@ -49,14 +49,14 @@
     "defaultMessage": "!!!Delegate to a DRep",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 63,
+      "line": 71,
       "column": 30,
-      "index": 3582
+      "index": 4083
     },
     "end": {
-      "line": 66,
+      "line": 74,
       "column": 3,
-      "index": 3692
+      "index": 4193
     }
   },
   {
@@ -64,14 +64,14 @@
     "defaultMessage": "!!!You are designating someone else to cast vote on your behalf for all proposals now and in the future.",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 67,
+      "line": 75,
       "column": 36,
-      "index": 3730
+      "index": 4231
     },
     "end": {
-      "line": 71,
+      "line": 79,
       "column": 3,
-      "index": 3935
+      "index": 4436
     }
   },
   {
@@ -79,14 +79,14 @@
     "defaultMessage": "!!!Abstain",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 72,
+      "line": 80,
       "column": 22,
-      "index": 3959
+      "index": 4460
     },
     "end": {
-      "line": 75,
+      "line": 83,
       "column": 3,
-      "index": 4050
+      "index": 4551
     }
   },
   {
@@ -94,14 +94,14 @@
     "defaultMessage": "!!!You are choosing not to cast a vote on all proposals now and in the future.",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 76,
+      "line": 84,
       "column": 28,
-      "index": 4080
+      "index": 4581
     },
     "end": {
-      "line": 79,
+      "line": 87,
       "column": 3,
-      "index": 4245
+      "index": 4746
     }
   },
   {
@@ -109,14 +109,14 @@
     "defaultMessage": "!!!No confidence",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 80,
+      "line": 88,
       "column": 27,
-      "index": 4274
+      "index": 4775
     },
     "end": {
-      "line": 83,
+      "line": 91,
       "column": 3,
-      "index": 4376
+      "index": 4877
     }
   },
   {
@@ -124,14 +124,14 @@
     "defaultMessage": "!!!You are expressing a lack of trust for all proposals now and in the future.",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 84,
+      "line": 92,
       "column": 33,
-      "index": 4411
+      "index": 4912
     },
     "end": {
-      "line": 87,
+      "line": 95,
       "column": 3,
-      "index": 4581
+      "index": 5082
     }
   },
   {
@@ -139,14 +139,14 @@
     "defaultMessage": "!!!DRep Key",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 88,
+      "line": 96,
       "column": 11,
-      "index": 4594
+      "index": 5095
     },
     "end": {
-      "line": 91,
+      "line": 99,
       "column": 3,
-      "index": 4675
+      "index": 5176
     }
   },
   {
@@ -154,14 +154,14 @@
     "defaultMessage": "!!!Delegating to a DRep",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 92,
+      "line": 100,
       "column": 21,
-      "index": 4698
+      "index": 5199
     },
     "end": {
-      "line": 95,
+      "line": 103,
       "column": 3,
-      "index": 4801
+      "index": 5302
     }
   },
   {
@@ -169,14 +169,14 @@
     "defaultMessage": "!!!Abstaining",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 96,
+      "line": 104,
       "column": 14,
-      "index": 4817
+      "index": 5318
     },
     "end": {
-      "line": 99,
+      "line": 107,
       "column": 3,
-      "index": 4903
+      "index": 5404
     }
   },
   {
@@ -184,14 +184,14 @@
     "defaultMessage": "!!!Delegate voting to {drepID}",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 100,
+      "line": 108,
       "column": 24,
-      "index": 4929
+      "index": 5430
     },
     "end": {
-      "line": 103,
+      "line": 111,
       "column": 3,
-      "index": 5042
+      "index": 5543
     }
   },
   {
@@ -199,14 +199,14 @@
     "defaultMessage": "!!!Select abstain",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 104,
+      "line": 112,
       "column": 17,
-      "index": 5061
+      "index": 5562
     },
     "end": {
-      "line": 107,
+      "line": 115,
       "column": 3,
-      "index": 5154
+      "index": 5655
     }
   },
   {
@@ -214,14 +214,14 @@
     "defaultMessage": "!!!Select no confidence",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 108,
+      "line": 116,
       "column": 22,
-      "index": 5178
+      "index": 5679
     },
     "end": {
-      "line": 111,
+      "line": 119,
       "column": 3,
-      "index": 5282
+      "index": 5783
     }
   },
   {
@@ -229,29 +229,29 @@
     "defaultMessage": "!!!Operations",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 112,
+      "line": 120,
       "column": 14,
-      "index": 5298
+      "index": 5799
     },
     "end": {
-      "line": 115,
+      "line": 123,
       "column": 3,
-      "index": 5384
+      "index": 5885
     }
   },
   {
-    "id": "components.governance.enterADrepIDAndPassword",
-    "defaultMessage": "!!!Enter a Drep ID and password to sign this transaction",
+    "id": "components.governance.enterPassword",
+    "defaultMessage": "!!!Enter password to sign this transaction",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 116,
-      "column": 27,
-      "index": 5413
+      "line": 124,
+      "column": 17,
+      "index": 5904
     },
     "end": {
-      "line": 119,
+      "line": 127,
       "column": 3,
-      "index": 5555
+      "index": 6022
     }
   },
   {
@@ -259,14 +259,14 @@
     "defaultMessage": "!!!Drep ID",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 120,
+      "line": 128,
       "column": 10,
-      "index": 5567
+      "index": 6034
     },
     "end": {
-      "line": 123,
+      "line": 131,
       "column": 3,
-      "index": 5646
+      "index": 6113
     }
   },
   {
@@ -274,14 +274,14 @@
     "defaultMessage": "!!!Thank you for participating in Governance",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 124,
+      "line": 132,
       "column": 28,
-      "index": 5676
+      "index": 6143
     },
     "end": {
-      "line": 127,
+      "line": 135,
       "column": 3,
-      "index": 5807
+      "index": 6274
     }
   },
   {
@@ -289,14 +289,14 @@
     "defaultMessage": "!!!This transaction can take a while!",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 128,
+      "line": 136,
       "column": 32,
-      "index": 5841
+      "index": 6308
     },
     "end": {
-      "line": 131,
+      "line": 139,
       "column": 3,
-      "index": 5969
+      "index": 6436
     }
   },
   {
@@ -304,14 +304,14 @@
     "defaultMessage": "!!!Participating in the Cardano Governance gives you the opportunity to participate in the voting as well as withdraw your staking rewards",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 132,
+      "line": 140,
       "column": 25,
-      "index": 5996
+      "index": 6463
     },
     "end": {
-      "line": 136,
+      "line": 144,
       "column": 3,
-      "index": 6224
+      "index": 6691
     }
   },
   {
@@ -319,14 +319,14 @@
     "defaultMessage": "!!!Go to Governance",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 137,
+      "line": 145,
       "column": 18,
-      "index": 6244
+      "index": 6711
     },
     "end": {
-      "line": 140,
+      "line": 148,
       "column": 3,
-      "index": 6340
+      "index": 6807
     }
   },
   {
@@ -334,14 +334,14 @@
     "defaultMessage": "!!!Find a DRep here",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 141,
+      "line": 149,
       "column": 16,
-      "index": 6358
+      "index": 6825
     },
     "end": {
-      "line": 144,
+      "line": 152,
       "column": 3,
-      "index": 6452
+      "index": 6919
     }
   },
   {
@@ -349,14 +349,14 @@
     "defaultMessage": "!!!Review the selections carefully to assign yourself a Governance Status",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 145,
+      "line": 153,
       "column": 17,
-      "index": 6471
+      "index": 6938
     },
     "end": {
-      "line": 148,
+      "line": 156,
       "column": 3,
-      "index": 6620
+      "index": 7087
     }
   },
   {
@@ -364,14 +364,14 @@
     "defaultMessage": "!!!You have selected <b>{action}</b> as your governance status.",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 149,
+      "line": 157,
       "column": 34,
-      "index": 6656
+      "index": 7123
     },
     "end": {
-      "line": 152,
+      "line": 160,
       "column": 3,
-      "index": 6812
+      "index": 7279
     }
   },
   {
@@ -379,14 +379,14 @@
     "defaultMessage": "!!!You have selected <b>{action}</b> as your governance status. You can change it at any time by clicking in the card below.",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 153,
+      "line": 161,
       "column": 25,
-      "index": 6839
+      "index": 7306
     },
     "end": {
-      "line": 157,
+      "line": 165,
       "column": 3,
-      "index": 7053
+      "index": 7520
     }
   },
   {
@@ -394,14 +394,14 @@
     "defaultMessage": "!!!Change DRep",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 158,
+      "line": 166,
       "column": 14,
-      "index": 7069
+      "index": 7536
     },
     "end": {
-      "line": 161,
+      "line": 169,
       "column": 3,
-      "index": 7156
+      "index": 7623
     }
   },
   {
@@ -409,14 +409,14 @@
     "defaultMessage": "!!!Confirm",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 162,
+      "line": 170,
       "column": 11,
-      "index": 7169
+      "index": 7636
     },
     "end": {
-      "line": 165,
+      "line": 173,
       "column": 3,
-      "index": 7249
+      "index": 7716
     }
   },
   {
@@ -424,14 +424,14 @@
     "defaultMessage": "!!!Transaction details",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 166,
+      "line": 174,
       "column": 22,
-      "index": 7273
+      "index": 7740
     },
     "end": {
-      "line": 169,
+      "line": 177,
       "column": 3,
-      "index": 7376
+      "index": 7843
     }
   },
   {
@@ -439,14 +439,14 @@
     "defaultMessage": "!!!Total",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 170,
+      "line": 178,
       "column": 9,
-      "index": 7387
+      "index": 7854
     },
     "end": {
-      "line": 173,
+      "line": 181,
       "column": 3,
-      "index": 7463
+      "index": 7930
     }
   },
   {
@@ -454,14 +454,14 @@
     "defaultMessage": "!!!Transaction failed",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 174,
+      "line": 182,
       "column": 21,
-      "index": 7486
+      "index": 7953
     },
     "end": {
-      "line": 177,
+      "line": 185,
       "column": 3,
-      "index": 7587
+      "index": 8054
     }
   },
   {
@@ -469,14 +469,14 @@
     "defaultMessage": "!!!Your transaction has not been processed properly due to technical issues",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 178,
+      "line": 186,
       "column": 32,
-      "index": 7621
+      "index": 8088
     },
     "end": {
-      "line": 181,
+      "line": 189,
       "column": 3,
-      "index": 7787
+      "index": 8254
     }
   },
   {
@@ -484,14 +484,14 @@
     "defaultMessage": "!!!Try again",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 182,
+      "line": 190,
       "column": 12,
-      "index": 7801
+      "index": 8268
     },
     "end": {
-      "line": 185,
+      "line": 193,
       "column": 3,
-      "index": 7884
+      "index": 8351
     }
   },
   {
@@ -499,14 +499,14 @@
     "defaultMessage": "!!!Withdraw warning",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 186,
+      "line": 194,
       "column": 24,
-      "index": 7910
+      "index": 8377
     },
     "end": {
-      "line": 189,
+      "line": 197,
       "column": 3,
-      "index": 8012
+      "index": 8479
     }
   },
   {
@@ -514,14 +514,14 @@
     "defaultMessage": "!!!To withdraw your rewards, you need to participate in the Cardano Governance. Your rewards will continue to accumulate, but you are only able to withdraw it once you join the Governance process.",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 190,
+      "line": 198,
       "column": 30,
-      "index": 8044
+      "index": 8511
     },
     "end": {
-      "line": 194,
+      "line": 202,
       "column": 3,
-      "index": 8335
+      "index": 8802
     }
   },
   {
@@ -529,14 +529,29 @@
     "defaultMessage": "!!!Participate on governance",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 195,
+      "line": 203,
       "column": 25,
-      "index": 8362
+      "index": 8829
     },
     "end": {
-      "line": 198,
+      "line": 206,
       "column": 3,
-      "index": 8474
+      "index": 8941
+    }
+  },
+  {
+    "id": "components.governance.enterDRepID",
+    "defaultMessage": "!!!Enter DRep ID",
+    "file": "src/features/Staking/Governance/common/strings.ts",
+    "start": {
+      "line": 207,
+      "column": 15,
+      "index": 8958
+    },
+    "end": {
+      "line": 210,
+      "column": 3,
+      "index": 9048
     }
   }
 ]
