feat: handle linking banxa

--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -763,7 +763,7 @@
   "global.send": "Send",
   "global.swap": "Swap",
   "global.staking": "Staking",
-  "global.exchange":"Exchange",
+  "global.exchange": "Exchange",
   "global.staking.epochLabel": "Epoch",
   "global.staking.stakePoolName": "Stake pool name",
   "global.staking.stakePoolHash": "Stake pool hash",
@@ -806,6 +806,8 @@
   "analytics.tosAnd": "and",
   "rampOnOff.createRampOnOff.disclaimer": "Disclaimer",
   "rampOnOff.createRampOnOff.contentDisclaimer": "Yoroi uses Banxa to provide direct Fiat-ADA exchange. By clicking “Proceed,” you also acknowledge that you will be redirected to our partner’s website, where you may be asked to accept their terms and conditions. Banxa may have buy and sell limitations depending on your location and your financial institution.",
+  "rampOnOff.createRampOnOff.buyADA": "Buy ADA",
+  "rampOnOff.createRampOnOff.sellADA": "Sell ADA",
   "rampOnOff.createRampOnOff.amountTitle": "ADA amount",
   "rampOnOff.createRampOnOff.providerFee": "Provider Fee",
   "rampOnOff.createRampOnOff.provider": "Provider",
