--- a/apps/wallet-mobile/translations/messages/src/features/RampOnOff/common/strings.json
+++ b/apps/wallet-mobile/translations/messages/src/features/RampOnOff/common/strings.json
@@ -4,14 +4,14 @@
     "defaultMessage": "!!!Current Balance",
     "file": "src/features/RampOnOff/common/strings.ts",
     "start": {
-      "line": 21,
+      "line": 23,
       "column": 18,
-      "index": 769
+      "index": 869
     },
     "end": {
-      "line": 24,
+      "line": 26,
       "column": 3,
-      "index": 858
+      "index": 958
     }
   },
   {
@@ -19,14 +19,14 @@
     "defaultMessage": "!!!PROCEED",
     "file": "src/features/RampOnOff/common/strings.ts",
     "start": {
-      "line": 25,
+      "line": 27,
       "column": 11,
-      "index": 871
+      "index": 971
     },
     "end": {
-      "line": 28,
+      "line": 30,
       "column": 3,
-      "index": 936
+      "index": 1036
     }
   },
   {
@@ -34,14 +34,14 @@
     "defaultMessage": "!!!Disclaimer",
     "file": "src/features/RampOnOff/common/strings.ts",
     "start": {
-      "line": 29,
+      "line": 31,
       "column": 14,
-      "index": 952
+      "index": 1052
     },
     "end": {
-      "line": 32,
+      "line": 34,
       "column": 3,
-      "index": 1042
+      "index": 1142
     }
   },
   {
@@ -49,14 +49,44 @@
     "defaultMessage": "!!!\"Yoroi uses Banxa to provide direct Fiat-ADA exchange. By clicking “Proceed,” you also acknowledge that you will be redirected to our partner’s website, where you may be asked to accept their terms and conditions. Banxa may have buy and sell limitations depending on your location and your financial institution.\"",
     "file": "src/features/RampOnOff/common/strings.ts",
     "start": {
-      "line": 33,
+      "line": 35,
       "column": 21,
-      "index": 1065
+      "index": 1165
     },
     "end": {
-      "line": 37,
+      "line": 39,
       "column": 3,
-      "index": 1471
+      "index": 1571
+    }
+  },
+  {
+    "id": "rampOnOff.createRampOnOff.buyADA",
+    "defaultMessage": "!!!Buy ADA",
+    "file": "src/features/RampOnOff/common/strings.ts",
+    "start": {
+      "line": 40,
+      "column": 10,
+      "index": 1583
+    },
+    "end": {
+      "line": 43,
+      "column": 3,
+      "index": 1666
+    }
+  },
+  {
+    "id": "rampOnOff.createRampOnOff.sellADA",
+    "defaultMessage": "!!!Sell ADA",
+    "file": "src/features/RampOnOff/common/strings.ts",
+    "start": {
+      "line": 44,
+      "column": 11,
+      "index": 1679
+    },
+    "end": {
+      "line": 47,
+      "column": 3,
+      "index": 1764
     }
   },
   {
@@ -64,14 +94,14 @@
     "defaultMessage": "!!!ADA amount",
     "file": "src/features/RampOnOff/common/strings.ts",
     "start": {
-      "line": 38,
+      "line": 48,
       "column": 15,
-      "index": 1488
+      "index": 1781
     },
     "end": {
-      "line": 41,
+      "line": 51,
       "column": 3,
-      "index": 1579
+      "index": 1872
     }
   },
   {
@@ -79,14 +109,14 @@
     "defaultMessage": "!!!Provider Fee",
     "file": "src/features/RampOnOff/common/strings.ts",
     "start": {
-      "line": 42,
+      "line": 52,
       "column": 15,
-      "index": 1596
+      "index": 1889
     },
     "end": {
-      "line": 45,
+      "line": 55,
       "column": 3,
-      "index": 1689
+      "index": 1982
     }
   },
   {
@@ -94,14 +124,14 @@
     "defaultMessage": "!!!Provider",
     "file": "src/features/RampOnOff/common/strings.ts",
     "start": {
-      "line": 46,
+      "line": 56,
       "column": 12,
-      "index": 1703
+      "index": 1996
     },
     "end": {
-      "line": 49,
+      "line": 59,
       "column": 3,
-      "index": 1789
+      "index": 2082
     }
   },
   {
@@ -109,14 +139,14 @@
     "defaultMessage": "!!!Banxa",
     "file": "src/features/RampOnOff/common/strings.ts",
     "start": {
-      "line": 50,
+      "line": 60,
       "column": 9,
-      "index": 1800
+      "index": 2093
     },
     "end": {
-      "line": 53,
+      "line": 63,
       "column": 3,
-      "index": 1880
+      "index": 2173
     }
   },
   {
@@ -124,14 +154,14 @@
     "defaultMessage": "!!!Exchange ADA",
     "file": "src/features/RampOnOff/common/strings.ts",
     "start": {
-      "line": 54,
+      "line": 64,
       "column": 9,
-      "index": 1891
+      "index": 2184
     },
     "end": {
-      "line": 57,
+      "line": 67,
       "column": 3,
-      "index": 1962
+      "index": 2255
     }
   },
   {
@@ -139,14 +169,14 @@
     "defaultMessage": "!!!Not Enough Balannce",
     "file": "src/features/RampOnOff/common/strings.ts",
     "start": {
-      "line": 58,
+      "line": 68,
       "column": 21,
-      "index": 1985
+      "index": 2278
     },
     "end": {
-      "line": 61,
+      "line": 71,
       "column": 3,
-      "index": 2080
+      "index": 2373
     }
   }
 ]
